--- a/work.html
+++ b/work.html
@@ -7,7 +7,8 @@
      <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Bonjour les amis</h1>
+    <center>  <h1>Bonjour les amis</h1></center>
+  
 </body>
 </html>
 
